crates/biome_js_parser/tests/js_test_suite/error/ts_constructor_type_err.ts
type C = new<>(a: A, b: B) => string;
type D = abstract new<>(a: A, b: B) => string;
